<resources>
    <string name="app_name">PM</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Drivers</string>
    <string name="tab_text_2">Vehicles</string>
    <string name="tab_text_3">Others</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_help">Help</string>
    <string name="action_user">User</string>
    <string name="action_logout">Logout</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="add_driver">Add Driver</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_other">Add Others</string>

    <string name="driver_name">Full Name</string>
    <string name="driver_licesnse_number">License Number</string>
    <string name="driver_license_type">License Type</string>
    <string name="driver_image">image</string>
    <string name="adhaar_number">Adhaar Number</string>
    <string name="driver_city_preference">Preferred City</string>
    <string name="driver_phone">Phone Number</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>

    <string name="CamButton">Image</string>

    <string name="vehiclePlate">Vehicle Licese Plate NO</string>
    <string name="vehicleAvail">Vehicle Avail</string>


    <string name="vehicle_type">Vehicle Type</string>
    <string-array name="vehicle_type">
        <item>Vehicle Type</item>
        <item>Micro</item>
        <item>Mini</item>
        <item>Sedan</item>
        <item>SUV</item>
        <item>Auto</item>
        <item>Bike</item>
        <item>Scooty</item>
        <item>Heavy Duty</item>

    </string-array>

    <string name="license_plate_no">License Plate Number</string>
    <string name="vehicle_image">Vehicle Image</string>
    <string-array name="vehicle_avail">
        <item>Vehicle Availability</item>
        <item>Hourly</item>
        <item>Daily</item>
        <item>Monthly</item>
        <item>Permanent</item>
    </string-array>

    <string name="tour_type">Tour Type:</string>
    <string name="piligrimage">Piligrimage Package</string>
    <string name="sightseeing">Sightseeing Package</string>
    <string-array name="others_vehicle_type">
        <item>Vehicle Type</item>
        <item>Micro</item>
        <item>Mini</item>
        <item>Sedan</item>
        <item>SUV</item>
        <item>Auto</item>
    </string-array>

    <string name="contactUs">Contact Us</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="emailId">Email</string>

    <string name="bookNow">Book Now</string>
    <string name="fullName">Full Name</string>

    <string name="userImage">User Image</string>
    <string name="status">Status</string>

    <string-array name="menuItems">
        <item>Approve</item>
        <item>Delete</item>
    </string-array>

</resources>
