<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bookingActivity">

    <EditText
        android:id="@+id/bookingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/fullName"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="84dp" />

    <EditText
        android:id="@+id/bookingPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/bookingName"
        tools:layout_editor_absoluteX="84dp" />

    <Button
        android:id="@+id/bookNowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/bookNow"
        app:layout_constraintTop_toBottomOf="@+id/bookingPhone"
        tools:layout_editor_absoluteX="148dp" />
</android.support.constraint.ConstraintLayout>