<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/driverDetailConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/driverImage"
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/CamButton"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorPrimary" />

        <TextView
            android:id="@+id/card_driverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/driver_name"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/card_driverNumber"
            app:layout_constraintStart_toEndOf="@+id/driverImage"
            app:layout_constraintTop_toTopOf="@+id/driverImage" />

        <TextView
            android:id="@+id/card_driverNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/driver_phone"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/card_driverCity"
            app:layout_constraintStart_toEndOf="@+id/driverImage"
            app:layout_constraintTop_toBottomOf="@+id/card_driverName" />

        <TextView
            android:id="@+id/card_driverCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/driver_city_preference"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/card_driverLicense"
            app:layout_constraintStart_toEndOf="@+id/driverImage"
            app:layout_constraintTop_toBottomOf="@+id/card_driverNumber" />

        <TextView
            android:id="@+id/card_driverLicense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/driver_licesnse_number"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/driverStatus"
            app:layout_constraintStart_toEndOf="@+id/driverImage"
            app:layout_constraintTop_toBottomOf="@+id/card_driverCity" />

        <TextView
            android:id="@+id/driverStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/status"
            android:textColor="@color/colorAccent"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/driverImage"
            app:layout_constraintStart_toEndOf="@+id/driverImage"
            app:layout_constraintTop_toBottomOf="@+id/card_driverLicense" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>