<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/driverDetailConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/card_otherImage"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/CamButton"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/darker_gray" />

        <TextView
            android:id="@+id/card_tourType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/tour_type"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/otherReqStatus"
            app:layout_constraintStart_toEndOf="@+id/card_otherImage"
            app:layout_constraintTop_toBottomOf="@+id/card_otherVehicleLicesnse" />

        <TextView
            android:id="@+id/card_otherVehicleType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/vehicle_type"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/card_otherVehicleLicesnse"
            app:layout_constraintStart_toEndOf="@+id/card_otherImage"
            app:layout_constraintTop_toTopOf="@+id/card_otherImage" />

        <TextView
            android:id="@+id/card_otherVehicleLicesnse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/vehiclePlate"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/card_tourType"
            app:layout_constraintStart_toEndOf="@+id/card_otherImage"
            app:layout_constraintTop_toBottomOf="@+id/card_otherVehicleType" />

        <TextView
            android:id="@+id/otherReqStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/status"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/card_otherImage"
            app:layout_constraintStart_toEndOf="@+id/card_otherImage"
            app:layout_constraintTop_toBottomOf="@+id/card_tourType" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>