<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".helpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="156dp"
        android:layout_height="156dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/contactUsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/contactUs"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contactUsAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
<-- Text View to display Adddress of developers !-->
    <TextView
        android:id="@+id/contactUsAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/address"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contactUsPhoneNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactUsText" />

    <TextView
        android:id="@+id/contactUsPhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:autoLink="phone"
        android:fontFamily="serif"
        android:text="@string/phone"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contactUsMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactUsAddress" />

    <TextView
        android:id="@+id/contactUsMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="email"
        android:fontFamily="serif"
        android:text="@string/emailId"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactUsPhoneNo" />
</android.support.constraint.ConstraintLayout>
