<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/driverDetailConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/card_vehicleImage"
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/CamButton"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/darker_gray" />

        <TextView
            android:id="@+id/card_vehicle_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/vehicle_type"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/card_vehiclePlateNo"
            app:layout_constraintStart_toEndOf="@+id/card_vehicleImage"
            app:layout_constraintTop_toTopOf="@+id/card_vehicleImage" />

        <TextView
            android:id="@+id/card_vehiclePlateNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/vehiclePlate"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/card_vehicleAvail"
            app:layout_constraintStart_toEndOf="@+id/card_vehicleImage"
            app:layout_constraintTop_toBottomOf="@+id/card_vehicle_type" />

        <TextView
            android:id="@+id/card_vehicleAvail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/vehicleAvail"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/vehicleReqStatus"
            app:layout_constraintStart_toEndOf="@+id/card_vehicleImage"
            app:layout_constraintTop_toBottomOf="@+id/card_vehiclePlateNo" />

        <TextView
            android:id="@+id/vehicleReqStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="TextView"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/card_vehicleImage"
            app:layout_constraintStart_toEndOf="@+id/card_vehicleImage"
            app:layout_constraintTop_toBottomOf="@+id/card_vehicleAvail" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>